--- a/HT.tab/BIM Tools.panel/bundle.yaml
+++ b/HT.tab/BIM Tools.panel/bundle.yaml
@@ -4,3 +4,8 @@ layout:
   - Workset Views
   - Central Model GUID
   - Select Group
+  - Levels List
+  - Export Schedules
+  - Design Options Review
+  - List DWGs
+  - Filter Usage
